Add ids to all imgs and size them
- Add ids to all imgs
- Create three new declaration blocks for new ids in style.css
- Style/size imgs in style.css

--- a/style.css
+++ b/style.css
@@ -35,3 +35,18 @@
 .body {
     background-color: rgb(209, 209, 207);
 }
+
+#lasagna-img {
+    height: auto;
+    width: 800px;
+}
+
+#ham-sandwich-img {
+    height: auto;
+    width: 800px;
+}
+
+#tomato-soup-img {
+    height: auto;
+    width: 800px;
+}
