--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     font-family: Verdana, sans-serif;
     font-weight: 1000;
     background-color: rgb(250, 225, 86);
+    border: 10px inset grey;
 }
 
 #ham-sandwich.title {
@@ -10,6 +11,7 @@
     font-family: Verdana, sans-serif;
     font-weight: 1000;
     background-color: rgb(236, 179, 241);
+    border: 10px inset grey;
 }
 
 #tomato-soup.title {
@@ -17,13 +19,15 @@
     font-family: Verdana, sans-serif;
     font-weight: 1000;
     background-color: rgb(250, 86, 86);
+    border: 10px inset grey;
 }
 
 .title.sub-title {
     font-size: 50px;
     font-family: Verdana, sans-serif;
     font-weight: 1000;
-    background-color: rgb(138, 133, 133);
+    background-color: rgb(184, 182, 182);
+    border: 7.5px inset grey;
 }
 
 .content {
