--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     font-weight: 1000;
     background-color: rgb(250, 225, 86);
     border: 10px inset grey;
+    margin: 20px 0px;
 }
 
 #ham-sandwich.title {
@@ -12,6 +13,7 @@
     font-weight: 1000;
     background-color: rgb(236, 179, 241);
     border: 10px inset grey;
+    margin: 20px 0px;
 }
 
 #tomato-soup.title {
@@ -20,6 +22,7 @@
     font-weight: 1000;
     background-color: rgb(250, 86, 86);
     border: 10px inset grey;
+    margin: 20px 0px;
 }
 
 .title.sub-title {
@@ -28,6 +31,7 @@
     font-weight: 1000;
     background-color: rgb(184, 182, 182);
     border: 7.5px inset grey;
+    margin: 50px 0px 20px 0px;
 }
 
 .content {
